--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
-body {
-    background-color: aquamarine;
+@keyframes spin {
+    from {transform:rotate(0deg);}
+    to {transform:rotate(360deg);}
 }
+
+
+
