--- a/src/Home.css
+++ b/src/Home.css
@@ -18,7 +18,7 @@
     img {
         width: 100px;
         padding-top: 33vw;
-        
+        display: none;
         justify-content: flex-end;
         
     }
