--- a/src/Home.css
+++ b/src/Home.css
@@ -1,3 +1,10 @@
+#home {
+  display: flex;
+  justify-content: center;
+}
+
+
+
 @keyframes fadeIn {
     0% {opacity:0;}
     100% {opacity:1;}
@@ -23,11 +30,11 @@
         
     }
 
-    h1 {
-      font-size: 10px;
+   
+    #main {
+
+      padding-left: 10vw;
     }
-    
-    
 
 
     
