--- a/src/Home.css
+++ b/src/Home.css
@@ -1,4 +1,5 @@
 #home {
+  padding-top: 10vw;
   display: flex;
   justify-content: center;
 }
@@ -26,15 +27,17 @@
         width: 100px;
         padding-top: 33vw;
         display: none;
-        justify-content: flex-end;
+        
         
     }
 
-   
-    #main {
-
-      padding-left: 10vw;
+    #home {
+  display: flex;
+  justify-content: center;
     }
+
+   
+    
 
 
     
